add getReommendedUserByRating
